Fix Firefox Xremote on the trunk by bringing blizzard's patch for bug 244060 over from the Aviary branch.  r=bsmedberg, sr=bryner.